# ConvoSeed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_README.md  PROJECT_SUMMARY.md  PUBLISH.md  README.md  identify.py  pyproject.toml  sample_conversation.json
.claude/: settings.local.json
.github/workflows/: publish.yml
convoseed_agent/: __init__.py  cache.py  encoder.py  registry.py  scheduler.py  wrapper.py
docs/: abstract.md
docs/docs/: README.md
examples/: README.md
experiments/: gemma3_12b_results.json
paper/: csp1_paper.tex
spec/: CSP-1.md  CSP-1_Protocol.md
src/: decode.py  encode.py
tests/cross_model/: convoseed_ab_test.py
tests/v2_style_ab/: convoseed_ab_test.jsx
tests/v3_skill_cache/: csp1_task_test.jsx  csp1_task_test_v2.jsx
tools/: fp_create.py
