[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convoseed-agent"
version = "1.1.0"
description = "Agent skill caching via CSP-1 fingerprints — every session makes the next one better"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashraful", email = "ashraful.islam.cse@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "ai", "agent", "llm", "skill-cache", "fingerprint",
    "convoseed", "csp-1", "langchain", "autogen"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.6"]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.25"]
all        = ["sentence-transformers>=2.6", "openai>=1.0", "anthropic>=0.25"]
dev        = ["pytest>=7.0", "twine>=4.0", "build>=1.0"]

[project.urls]
Homepage   = "https://github.com/0xAshraFF/ConvoSeed"
Repository = "https://github.com/0xAshraFF/ConvoSeed"
Issues     = "https://github.com/0xAshraFF/ConvoSeed/issues"

[project.scripts]
convoseed = "convoseed_agent.registry:_cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["convoseed_agent*"]
