[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convoseed-agent"
version = "1.2.0"
description = "CSP-1 fingerprint encoder — compress any conversation into a portable 200KB .fp file"
readme = "PACKAGE_README.md"
license = { text = "MIT" }
authors = [{ name = "Ashraful Islam", email = "ashraful.islam.cse@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "ai", "agent", "llm", "fingerprint", "conversation",
    "style", "csp-1", "convoseed", "hyperdimensional"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
decode = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
]

[project.scripts]
convoseed-encode = "convoseed_agent.encode:main"
convoseed-identify = "convoseed_agent.identify:main"

[project.urls]
Homepage = "https://github.com/0xAshraFF/ConvoSeed"
Repository = "https://github.com/0xAshraFF/ConvoSeed"
"Bug Tracker" = "https://github.com/0xAshraFF/ConvoSeed/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["convoseed_agent*"]
